plugins {
    id 'java'
    id 'com.diffplug.spotless' version '8.2.1' apply false
    id 'com.palantir.java-format-spotless' version '2.89.0' apply false
    id 'net.ltgt.errorprone' version '5.0.0' apply false
    id 'io.github.reqstool.gradle-plugin' version '0.1.0' apply false
    // id 'com.vaadin' version '24.7.4' apply false  // incompatible with Gradle 9.x
}

allprojects {
    group = 'io.github.atunkodev'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
        maven {
            url = 'https://repo.gradle.org/gradle/libs-releases'
            content {
                includeGroup 'org.gradle'
            }
        }
        maven {
            url = 'https://central.sonatype.com/repository/maven-snapshots/'
            mavenContent { snapshotsOnly() }
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'com.palantir.java-format-spotless'
    apply plugin: 'checkstyle'
    apply plugin: 'net.ltgt.errorprone'
    apply plugin: 'io.github.reqstool.gradle-plugin'

    requirementsTool {
        datasetPath = file("docs/reqstool")
    }

    tasks.named('assembleRequirements') {
        dependsOn 'compileJava', 'compileTestJava'
    }

    tasks.named('build') {
        dependsOn 'assembleRequirements'
    }
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    // --- Spotless (formatting, auto-configured by com.palantir.java-format-spotless) ---
    spotless {
        java {
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    // --- Checkstyle (style & convention enforcement) ---
    checkstyle {
        toolVersion = '10.25.0'
        configFile = rootProject.file('gradle/checkstyle/checkstyle.xml')
        configProperties = ['suppressionFile': rootProject.file('gradle/checkstyle/suppressions.xml')]
        maxErrors = 0
        maxWarnings = 0
    }

    // --- Error Prone (compile-time bug detection) ---
    dependencies {
        errorprone rootProject.libs.errorprone.core
    }

    tasks.withType(JavaCompile).configureEach {
        options.errorprone {
            // Use default checks — no extra config needed
        }
    }

    dependencies {
        // reqstool annotations
        compileOnly rootProject.libs.reqstool.annotations
        annotationProcessor rootProject.libs.reqstool.annotations
        testCompileOnly rootProject.libs.reqstool.annotations
        testAnnotationProcessor rootProject.libs.reqstool.annotations

        // Testing
        testImplementation platform(rootProject.libs.junit.bom)
        testImplementation rootProject.libs.junit.jupiter
        testImplementation rootProject.libs.junit.jupiter.params
        testImplementation rootProject.libs.assertj.core
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            events 'passed', 'skipped', 'failed'
            showStandardStreams = true
        }
    }
}
